# chess-ai

./: .gitignore  minimax_tree.txt  pyproject.toml
src/chess_ai/: __init__.py  main.py
src/chess_ai.egg-info/: PKG-INFO  SOURCES.txt
src/chess_minimax/: Board.py  ChessPiece.py  main.py
