[project]
name = "chess-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hobs", email = "git@totalgood.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.1",
]

[project.scripts]
chess-ai = "chess_ai:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
